<resources>
    <string name="app_name">Wambi Shop</string>
    <string name="register">Registro</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="confirm_password_hint">Confirmar contraseña</string>
    <string name="register_button">Registrarse</string>
    <string name="identify">Identifícate</string>
    <string name="add_to_cart">Añadir al carrito</string>
    <string name="product_name">Sunlee Noodles De Arroz 10Mm 400G</string>
    <string name="product_price">3,75€</string>
    <string name="product_image">Imagen del producto</string>
    <string name="favorite_button">Añadir a favoritos</string>
    <string name="share_button">Compartir</string>
    <string name="cart_button">Carrito</string>
    <string name="back_button">Atrás</string>
    <string name="delete_button">Eliminar producto</string>
    <string name="product_name_example">Nombre del Producto</string>
    <string name="product_price_example">3,75€</string>
    <string name="decrease_button">Disminuir</string>
    <string name="increase_button">Aumentar</string>
    <string name="decrease_button_desc">Botón para disminuir la cantidad</string>
    <string name="increase_button_desc">Botón para aumentar la cantidad</string>
    <string name="quantity_default">1</string>
    <string name="toolbar_title">Cesta</string>
    <string name="quantity_text">Cantidad del Producto</string>
    <string name="buy_button">COMPRAR</string>
    <string name="select_all">Todo</string>
    <string name="product_price_format">%1$.2f€</string>
    <string name="product_name_sunlee_noodles">Sunlee Noodles De Arroz 10Mm 400G</string>
    <string name="product_name_lechuga_marina">Lechuga Marina 100G</string>
    <string name="total_price">Precio Total:</string>
    <string name="select_product">Seleccionar producto</string>
    <string name="wambi_shop_title">Wambi Shop</string>
    <string name="hinted_search_text">Hinted search text</string>
    <string name="noodles_category">Categoría de Noodles</string>
    <string name="sauces_category">Categoría de Salsas</string>
    <string name="sweets_category">Categoría de Dulces</string>
    <string name="noodles">Noodles</string>
    <string name="sauces">Salsas/Aceites</string>
    <string name="sweets">Dulces</string>
    <string name="home_button">Inicio</string>
    <string name="search_bottom_button">Buscar</string>
    <string name="profile_button">Perfil</string>
    <string name="search_button">Buscar</string>
    <string name="profile_title">Perfil</string>
    <string name="profile_image">Imagen de perfil</string>
    <string name="logout">Desconectarse</string>
</resources>
